<resources>
    <string name="app_name">Smile Note</string>

    <!--Setting-->
    <string name="setting_type_birthday">Thông báo sinh nhật</string>
    <string name="setting_type_event">Thông báo sự kiện</string>
    <string name="setting_type_setting">Thay đổi thông tin</string>
    <string name="setting_type_backup">Sao lưu dữ liệu</string>
    <string name="setting_type_information">Giới thiệu</string>

    <!--Spinner-->
    <string name="home_spinner_position_0">1 tuần</string>
    <string name="home_spinner_position_1">1 tháng</string>

    <string name="create_spinner_type_0">Tiềm năng</string>
    <string name="create_spinner_type_1">Tiêu dùng lẻ</string>
    <string name="create_spinner_type_2">Tiêu dùng tích cực</string>
    <string name="create_spinner_type_3">NPP mới</string>
    <string name="create_spinner_type_4">NPP tích cực</string>

    <string name="list_spinner_type_0">Tiềm năng</string>
    <string name="list_spinner_type_1">Tiềm năng tháng</string>
    <string name="list_spinner_type_2">Tiêu dùng</string>
    <string name="list_spinner_type_3">Nhà phân phối</string>
    <string name="list_spinner_type_4">Tất cả</string>

    <!--Validate-->
    <string name="validate_ada">Mã ADA không thể để trống</string>
    <string name="validate_name">Họ tên không thể để trống</string>
    <string name="validate_phone">SĐT không thể để trống</string>
    <string name="validate_address">Địa chỉ không thể để trống</string>
    <string name="toast_validate_string">Các thông tin (*) không thể bỏ trống</string>
    <string name="save_success">Lưu thành công!</string>
    <string name="phone_number_is_wrong">Số điện thoại không đúng!</string>
    <string name="action_settings">Settings</string>

    <!--Tab info-->
    <string name="tab_info">THÔNG TIN</string>
    <string name="tab_problem">VẤN ĐỀ</string>
    <string name="tab_plan">TK ÂN TÌNH</string>
    <string name="tab_product">SẢN PHẦM</string>

    <!--Title activity-->
    <string name="title_create_new_customer">THÊM KHÁCH HÀNG MỚI</string>
    <string name="update_info">CẬP NHẬT THÔNG TIN</string>
    <string name="list_customer">DANH SÁCH KHÁCH HÀNG</string>
    <string name="info_user">THÔNG TIN NGƯỜI DÙNG</string>

    <!--Button-->
    <string name="save">LƯU</string>
    <string name="delete">XÓA</string>
    <string name="cancel">HỦY</string>
    <string name="update">CẬP NHẬT</string>

    <!--Search-->
    <string name="search_hint">Tên, ADA hoặc SĐT</string>

    <string name="ada_code">Mã ADA: %s</string>

    <!--Notification-->
    <string name="notification_birth_day">Thông báo sinh nhật</string>
    <string name="notification_birth_day_content">Hôm nay là sinh nhật của </string>
    <string name="notification_event">Sự kiện mới</string>
    <string name="notification_event_content">Hôm nay bạn có kế hạch với </string>

    <!--Create-->
    <string name="some_problem">Các vấn đề</string>
    <string name="help_problem">Vấn đề cần giúp đỡ</string>
    <string name="resolver">Phương pháp giải quyết</string>
    <string name="note">Ghi chú</string>
    <string name="need_product">Sản phẩm cần dùng</string>
    <string name="account_special">Tài khoản ân tình</string>

    <!--Dialog-->
    <string name="title_dialog_delete">Xoá khách hàng</string>
    <string name="title_dialog_delete_notification">Xoá thông báo</string>
    <string name="title_dialog_back_create">Huỷ tạo khách hàng</string>
    <string name="title_dialog_back_edit">Huỷ chỉnh sửa</string>
    <string name="dialog_content_create">Khách hàng sẽ không được tạo mới</string>
    <string name="dialog_content_edit">Thông tin sẽ được khôi phục như ban đầu</string>
    <string name="dialog_delete_content">Thông tin về khách hàng sẽ bị xoá, bạn có chắc chắn xoá khách hàng này?</string>
    <string name="dialog_delete_content_notification">Xoá tất cả thông báo của bạn?</string>
    <string name="customer_need_new_product">KH SẮP HẾT SẢN PHẨM</string>
    <string name="ada_is_exit">Mã số ADA này đã tồn tại!</string>
    <string name="new_meeting">Thêm cuộc gặp mới</string>
    <string name="dialog_delete_meeting_content">Thông tin về cuộc gặp sẽ bị xóa, bạn có chắc chắn xóa?</string>
    <string name="dialog_delete_meeting_title">Xóa ghi chép cuộc gặp</string>
    <string name="dialog_title_view">Thông tin cuộc gặp</string>
    <string name="dialog_title_edit">Sửa thông tin cuộc gặp</string>
    <string name="edit">SỬA</string>
    <string name="ok">OK</string>
    <string name="edit_info">Chỉnh sửa thông tin</string>
    <string name="add_new_product">Thêm sản phẩm cần dùng</string>
    <string name="add_new_product_s">Thêm sản phẩm mới</string>
    <string name="date_create">Ngày tạo: %s</string>
    <string name="delete_product">Xóa sản phẩm</string>
    <string name="confirm_delete_product">Xóa sản phẩm này của người dùng?</string>
    <string name="empty_content_product">Thông tin không được trống!</string>
    <string name="sure">CÓ</string>
    <string name="nope">KHÔNG</string>
    <string name="content_dialog_cancel_update_info">Thông tin của bạn sẽ không được cập nhật, bạn có muốn huỷ?</string>

    <!--Toast-->
    <string name="create_success">Đã tạo mới!</string>
    <string name="change_success">Đã lưu thay đổi!</string>
    <string name="empty_info">Thông tin còn trống!</string>
    <string name="validate_schedule_time">Ngày dự kiến không được trước ngày đã gặp!</string>
    <string name="type_product">Loại sản phẩm</string>
    <string name="time_use">Dự kiến thời gian dùng hết</string>
    <string name="add_success">Đã thêm mới!</string>

    <!--Alert setting-->
    <string name="alert_anouncement_backup">Tính năng đang được phát triển, sẽ được cập nhật trong thời gian sớm nhất!</string>
    <string name="alert_about_us">Ứng dụng quản lí khách hàng thông minh, xây dựng bởi Smile 4T Group
        \nPhiên bản 1.0
        \n\nLiên hệ: Nguyễn Đăng Luân
        \nSĐT: 0981.800.996
        \nĐịa chỉ: Nơ 6B - KDT Linh Đàm - Hoàng Liệt - Hoàng Mai - HN
        \nEmail: nguyenluanway@gmail.com
    </string>
    <string name="dont_have_notification">Bạn không có thông báo mới nào!</string>
    <string name="enter_your_name_touse_app">Nhập tên của bạn để bắt đầu sử dụng ứng dụng</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email chưa chính xác</string>
    <string name="error_invalid_password_login">Mật khẩu sai</string>
    <string name="error_invalid_password">Mật khẩu quá ngắn</string>
    <string name="error_incorrect_password">Mật khẩu không khớp</string>
    <string name="error_field_required">Trường này không được trống</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_email">Địa chỉ email</string>
    <string name="remember_login">Ghi nhớ</string>
    <string name="singin_login">ĐĂNG NHẬP</string>
    <string name="do_not_have_accout">Chưa có tài khoản?</string>
    <string name="already_have_accout">Đã có tài khoản?</string>
    <string name="login_register">Đăng ký</string>
    <string name="signup_login">Đăng nhập</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="signup_name">Họ tên</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="sign_up">ĐĂNG KÍ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>