<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_login_area_singin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_centerVertical="true"
    android:paddingEnd="48dp"
    android:paddingStart="48dp">

    <RelativeLayout
        android:id="@+id/id_login_field_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_edit_text_login"
        android:paddingBottom="3dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="3dp">

        <ImageView
            android:id="@+id/id_email_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:alpha="0.5"
            android:src="@drawable/ic_email_64" />

        <EditText
            android:id="@+id/id_login_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/id_email_ic"
            android:background="@color/transparent"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_login_field_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/id_login_field_email"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edit_text_login"
        android:paddingBottom="3dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="3dp">

        <ImageView
            android:id="@+id/id_pass_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:alpha="0.5"
            android:src="@drawable/ic_password_64" />

        <EditText
            android:id="@+id/id_login_edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/id_pass_ic"
            android:background="@color/transparent"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/id_login_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/id_login_field_pass"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_login"
        android:gravity="center"
        android:text="@string/singin_login"
        android:textColor="@color/color_new_white" />

    <RelativeLayout
        android:id="@+id/id_login_field_remember_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_login_btn"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/id_login_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="3dp"
            android:text="@string/forgot_pass"
            android:textColor="@color/color_new_white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/id_login_checkbox_rem"
            android:text="@string/remember_login"
            android:textColor="@color/color_new_white" />

        <CheckBox
            android:id="@+id/id_login_checkbox_rem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>